# gstats

./: .gitignore  Cargo.toml  README.md
attic/bpdaggen/: Cargo.toml
attic/bpdaggen/src/: main.rs
attic/new/: Cargo.toml
attic/new/src/: graph.rs  id.rs  main.rs  stats.rs  transaction.rs
attic/old/: Cargo.toml
attic/old/src/: error.rs  graph.rs  id.rs  main.rs  parse.rs  stats.rs  tx.rs  txref.rs  validate.rs
src/: bpdaggen.rs  graph.rs  id.rs  ledgerstats.rs  lib.rs  stats.rs  transaction.rs
testdata/: test_0.out  test_1.in  test_10.in  test_10.out  test_2.in  test_2.out  test_3.in  test_3.out  test_4.in  test_4.out  test_5.in  test_5.out  test_6.in  test_6.out  test_7.in  test_7.out  test_8.in  test_8.out  test_9.in  test_9.out
tests/: test_files.rs
