[package]
name = "ledgerstats"
version = "0.1.0"
authors = ["Fred Morcos <fred.morcos@gmail.com>"]
edition = "2018"
description = "Ledger statistics"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "=0.4.6"
env_logger = "=0.6.2"
structopt = "=0.2.18"
derive_more = "=0.15.0"

[lib]
name = "graphstats"
path = "src/lib.rs"

[[bin]]
name = "ledgerstats"
path = "src/ledgerstats.rs"
