[package]
name = "gstats"
version = "0.1.0"
authors = ["Fred Morcos <fred.morcos@gmail.com>"]
edition = "2018"
description = "Graph statistics"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.9"
structopt = "0.3"
derive_more = "0.99"
conv = "0.3"
rand = "0.7"

[lib]
name = "graphstats"
path = "src/lib.rs"

[[bin]]
name = "gstats"
path = "src/gstats.rs"

[[bin]]
name = "bpdaggen"
path = "src/bpdaggen.rs"
